--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,9 @@
 language: ruby
 rvm:
-  - 2.0
-  - 2.2.3
-  - 2.3.0
+  - 2.2.6
+  - 2.3.3
+  - 2.4.0
+  - jruby-9.1.7.0
 
 branches:
   only:
@@ -13,9 +14,15 @@ addons:
 
 env:
   - REDMINE_VER=2.6-stable
-  - REDMINE_VER=3.1-stable
-  - REDMINE_VER=3.2-stable
+  - REDMINE_VER=3.3-stable
   - REDMINE_VER=master
+
+matrix:
+  exclude:
+  - rvm: 2.4.0
+    env: REDMINE_VER=2.6-stable
+  - rvm: 2.4.0
+    env: REDMINE_VER=3.3-stable
 
 install: "echo skip bundle install"
 
